# iomidipp

./: .clang-format  .gitignore  .gitmodules  LICENSE.txt  README.md
.github/workflows/: ci.yml  clangformat.yml
docs/: midifile.md
sources/: CMakeLists.txt
sources/iomidipp/: CMakeLists.txt
sources/iomidipp/include/iomidipp/: MidiData.h  MidiEvent.h  MidiEventList.h  MidiFile.h  MidiMessage.h  Utils.h
sources/iomidipp/src/: MidiData.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  Utils.cpp
sources/iomidipp/tests/: CMakeLists.txt  TestJoinAndSplitTracks.cpp  TestMain.cpp  TestReadMidi.cpp
sources/iomidipp/tests/testdata/: scratch.mid
tools/: build_and_test.ps1  build_and_test.sh
